# galform_execution

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
conda/: meta.yaml
examples/: 01_quickstart.ipynb  02_simulations_models_and_pipeline.ipynb  03_parameter_studies_and_trees.ipynb  galform_execution.ipynb
galform_execution/: __init__.py  __main__.py  submit_galform_job.py
galform_execution/config/: models.json  partition_configs.json
galform_execution/config/redshift_lists/: COLIBRE-L100m6.txt  FLAMINGO-L1000N1800.txt  L800.txt  Mill1.txt  Mill2.txt
galform_execution/config/simulations/: colibre_family.json  dove_family.json  eagle_family.json  flamingo_family.json  millennium_family.json
recipe/: meta.yaml
src/: submit_galform_job.py
src/config/: dust_params.json  run_flags.json
src/config/simulations/: colibre_family.json  flamingo_family.json  millennium_family.json  nifty_family.json
tests/: conftest.py  test_submit_galform_job.py  test_submit_job.py
