[project]
name = "galform_execution"
version = "0.0.0"
description = "GALFORM execution helper utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Oscar Hickman" } ]
dependencies = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["submit_galform_job"]

[tool.setuptools.package-dir]
"" = "src"
