[project]
name = "galform_execution"
version = "0.1.6"
description = "GALFORM execution helper utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Oscar Hickman" } ]
dependencies = []
license = { text = "MIT" }
keywords = ["astronomy", "galform", "slurm", "submission"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: POSIX :: Linux",
]
urls = { "Homepage" = "https://github.com/OscarHickman/galform_execution" }

[project.scripts]
submit-galform-job = "galform_execution.submit_galform_job:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["galform_execution"]
include-package-data = true

[tool.setuptools.package-data]
galform_execution = ["config/**/*.json", "config/**/*.txt"]

